--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "get-title-at-url": "^1.1.8",
     "tplink-smarthome-api": "^3.3.0",
     "xmlhttprequest": "^1.8.0"
   },
